# SciDB-GDAL

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/modules/: FindSciDB.cmake
src/: CMakeLists.txt  LogicalLoadGDAL.cpp  PhysicalLoadGDAL.cpp
